--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ Django==1.4.1
 django-debug-toolbar==0.9.4
 django-social-auth==0.7.6
 django-cache-machine==0.6
+South==0.7.6
+celery==3.0.11
+django-celery==3.0.11
 
 # For Heroku
 dj-database-url==0.2.1
