--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Django==1.4.1
 django-debug-toolbar==0.9.4
 django-social-auth==0.7.6
 django-cache-machine==0.6
+django-storages==1.1.4
+boto==2.3.0
 
 # For Heroku
 dj-database-url==0.2.1
